removed unused notifications, refactored methods, cleanup